Also run phpcs on testing/codingstandard_baseline_integration branch

--- a/.github/workflows/coding-standard-baseline.yml
+++ b/.github/workflows/coding-standard-baseline.yml
@@ -3,6 +3,8 @@ on:
   pull_request:
     branches:
       - 2.4-develop
+      - testing/codingstandard_baseline_integration
+  
 permissions:
   contents: read
 jobs:
