Also run on push

--- a/.github/workflows/coding-standard-baseline.yml
+++ b/.github/workflows/coding-standard-baseline.yml
@@ -1,10 +1,13 @@
 name: Coding Standard With Baseline
 on:
+  push:
+    branches:
+      - testing/codingstandard_baseline_integration
   pull_request:
     branches:
       - 2.4-develop
       - testing/codingstandard_baseline_integration
-  
+
 permissions:
   contents: read
 jobs:
