--- a/.github/workflows/coding-standard-baseline.yml
+++ b/.github/workflows/coding-standard-baseline.yml
@@ -1,8 +1,6 @@
 name: Coding Standard With Baseline
-on:
-  pull_request:
-    branches:
-      - 2.4-develop
+on: [push]
+
 permissions:
   contents: read
 jobs:
