--- a/.github/workflows/coding-standard-baseline.yml
+++ b/.github/workflows/coding-standard-baseline.yml
@@ -13,5 +13,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run Coding Standard Baseline
-        uses: Tjitse-E/github-actions/coding-standard-baseline@bugfix/changed-files
+        uses: mage-os/github-actions/coding-standard-baseline@main
 
